09142001 - David Hedbor submitted a patch to handle a case where the
           current working directory has been deleted out from under the
           process (both in platform/unix.c and physfs.c itself). Thanks,
           David! Added a CREDITS file. Changed the format of the author field
           in PHYSFS_ArchiveInfo to put the email address between "<>" instead
           of "()" chars. Updated TODO. make install now deletes previous
           revisions of the library. Changed version to 0.1.4.
09252001 - Changed API: PHYSFS_setSaneConfig() takes an organization name, and
           sets up less directories. Be warned. Fixes from David Hedbor:
           make setSaneConfig() set write directory correctly if it had to
           create the directory, and make sure that the writing functions
           get used in dir.c when a file is opened for writing/appending.
           Updated CREDITS.
10092001 - Syntax fixes in dir.c, a FIXME in grp.c, and a "cat" command in
           the test program. Apparently I had accidentally removed a rather
           crucial line from dir.c a few revisions ago, and no one noticed. :(
           Fixed. The win32 userdir will default to the base dir, now.
11142001 - Removed a redundant error check in platform/win32.c
03052002 - Made unix.c's timeslice implementation more portable, and added a
           Darwin-specific means to detect CDs (thanks to Patrick Stein).
           Minor cleanup in win32.c (changed "for (; condition ;)" into
           "while (condition)" ...)
03152002 - PHYSFS_setSaneConfig() now handles failure to set the write dir
           better. Patched makefile to link the test program. Changed all the
           "write" functions to get data from a "const" buffer. Added an
           "extras" dir, which currently contains PhysFS->SDL_RWops glue code.
03202002 - Patched platform/win32.c to compile.

--ryan. (icculus@clutteredmind.org)

/* end of CHANGELOG ... */
